Repair kits can be bought and used in the HQ war menu

--- a/assets/hqWarMenu.html
+++ b/assets/hqWarMenu.html
@@ -7,7 +7,7 @@
   .btn {
       background-color:red;
       font:bold 14px Arial;
-      width:200;
+      width:500;
       height:100;
       background-color:lightsteelblue;
       vertical-align: middle;
@@ -38,6 +38,7 @@
   <h2>You are in the HQ</h2>
   <label id="moneyLabel"></label>
   <div class="btn-group">
+      <button id="repairButton" type="button" class=btn>Repair Tank</button>    
       <button id="leaveButton" type="button" class=btn>Leave HQ</button>    
   </div>
 </div>
