--- a/main.html
+++ b/main.html
@@ -1,60 +1,149 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <script src="playerStats.js"></script>
-        <title>Tanx2 - Return of the XGreen Tanx</title>
-        <style>
-            .myDiv {
-                border: 5px outset lightseagreen;
-                background-color: lightblue;    
-                text-align: center;
-            }
-            .btn {
-                background-color:red;
-                font:bold 14px Arial;
-                width:200;
-                height:100;
-                background-color:lightsteelblue;
-                vertical-align: middle;
-            }
-            .btn-group button {
-                background-color: #04AA6D; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
-                padding: 10px 24px; /* Some padding */
-                cursor: pointer; /* Pointer/hand icon */
-                width: 50%; /* Set a width if needed */
-                /* display: block; Make the buttons appear below each other */
-                text-align: center;
-                vertical-align: middle;
-                }
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {font-family: Verdana;}
 
-                .btn-group button:not(:last-child) {
-                border-bottom: none; /* Prevent double borders */
-                }
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
 
-                /* Add a background color on hover */
-                .btn-group button:hover {
-                background-color: #3e8e41;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="myDiv">
-            <h2>Tanx2 - Prepare for next assignment</h2>
-            <label id="currentLevelLabel">Test</label>
-            <label id="moneyLabel"></label>
-            <div class="btn-group">
-                <button id="startButton" type="button" class=btn>Try Next Level</button>
-                <button id="buyButton" type="button" class=btn>Buy Equipment</button>
-                <button id="quitButton" type="button" class=btn>Quit Game</button>    
-            </div>
-        </div>
-    </body>
-</html>
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+  border: 5px outset lightseagreen;
+  background-color: lightblue;    
+  text-align: center;
+}
+
+.btn {
+    background-color:red;
+    font:bold 14px Arial;
+    width:200;
+    height:100;
+    background-color:lightsteelblue;
+    vertical-align: middle;
+}
+.btn-group button {
+    background-color: #04AA6D; /* Green background */
+    border: 1px solid green; /* Green border */
+    color: white; /* White text */
+    padding: 10px 24px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    width: 50%; /* Set a width if needed */
+    /* display: block; Make the buttons appear below each other */
+    text-align: center;
+    vertical-align: middle;
+    }
+
+    .btn-group button:not(:last-child) {
+    border-bottom: none; /* Prevent double borders */
+    }
+
+    /* Add a background color on hover */
+    .btn-group button:hover {
+    background-color: #3e8e41;
+}
+          
+</style>
+</head>
+<body>
+
+<h2>Tanx - Prepare for inner greeness</h2>
+
+<div class="tab">
+  <button class="tablinks" onclick="onTabClick(event, 'Home')">Home</button>
+  <button class="tablinks" onclick="onTabClick(event, 'Tank')">Tanks</button>
+  <button class="tablinks" onclick="onTabClick(event, 'HQ')">HQ</button>
+</div>
+
+<div id="Home" class="tabcontent">
+  <h3>Home</h3>
+  <div class="btn-group">
+    <button class="button" id="startButton" type="button" class=btn >Start Game</button>
+    <button id="quitButton" type="button" class=btn>Quit Game</button>
+  </div>
+</div>
+
+<div id="Tank" class="tabcontent">
+  <h3>Maintain your Tanks</h3>
+  <div class="btn-group">
+    <button id="buyTankEquipmentButton" type="button" class=btn>Buy Equipment</button>
+  </div>
+</div>
+
+<div id="HQ" class="tabcontent">
+  <h3>Manage your HQ</h3>
+  <div class="btn-group">
+    <button id="buyHqEquipmentButton" type="button" class=btn>Buy Equipment</button>
+  </div>
+</div>
 
 <script type="text/javascript">
+    document.getElementById("startButton").onclick = function () {
+      location.href = "game.html"
+  };
+
+  document.getElementById("quitButton").onclick = function () {
+      location.href = "index.html";
+  };
+
+  document.getElementById("buyTankEquipmentButton").onclick = function () {
+        location.href = "buy.html"
+  }
+
+  document.getElementById("buyHqEquipmentButton").onclick = function () {
+        location.href = "hq.html"
+  }
+function onTabClick(evt, tabName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(tabName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+</script>
+   
+</body>
+</html> 
+
+
+<!-- <script type="text/javascript">
     
     document.getElementById("currentLevelLabel").innerHTML = "Your current level: " + PlayerStats.getLevel()
 
@@ -70,4 +159,4 @@
     document.getElementById("quitButton").onclick = function () {
         location.href = "index.html";
     };
-</script>
+</script> -->
