MountWeapons implemented buyable weapons; weapons can be upgraded and mounted to the player's tank

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <script src="weapon.js"></script>
+    <script src="gun.js"></script>
     <script src="playerStats.js"></script>
     <title>Tanx2 - Return of the XGreen Tanx</title>
-    <a href="game.html" target="_self" class="">Play</a>
 </head>
 <body>
     <h1>Tanx 2 - The ultimate challange</h1>
