--- a/game.html
+++ b/game.html
@@ -9,11 +9,14 @@
     <script src="enemy.js"></script>
     <script src="enemyFollow.js"></script> 
     <script src="enemyWayPoint.js"></script> 
+    <script src="weapon.js"></script>
+    <script src="gun.js"></script>
+    <script src="rearGun.js"></script>
+    <script src="spreadGun.js"></script>
     <script src="phaser.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser-raycaster@0.10.2/dist/phaser-raycaster.min.js"></script>
     <script src="player.js"></script>
     <script src="playerStats.js"></script>
-    <script src="round.js"></script>
     <script src="statusScene.js"></script>
     <script src="tanxScene.js"></script>
     <style type="text/css">
