MultipleLevels added HTML page for selecting level to playe; added increase of available levels when highest avaiable level is won

--- a/main.html
+++ b/main.html
@@ -110,7 +110,7 @@ body {font-family: Verdana;}
 
 <script type="text/javascript">
     document.getElementById("startButton").onclick = function () {
-      location.href = "game.html"
+      location.href = "levelSelect.html"
   };
 
   document.getElementById("quitButton").onclick = function () {
