MountWeapons added styles.css; removed style tag from all html pages and added reference to styles.css

--- a/weaponBuy.html
+++ b/weaponBuy.html
@@ -8,81 +8,7 @@
         <script src="spreadGun.js"></script>
         <script src="playerStats.js"></script>
         <title>Tanx2 - Return of the Killer Tanx</title>
-        <style>
-            .myDiv {
-                border: 5px outset lightseagreen;
-                background-color: lightblue;    
-                text-align: center;
-            }
-            .btn {
-                background-color:red;
-                font:bold 14px Arial;
-                width:200;
-                height:100;
-                background-color:lightsteelblue;
-                vertical-align: middle;
-            }
-            .btn-group button {
-                background-color: #04AA6D; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
-                padding: 10px 24px; /* Some padding */
-                cursor: pointer; /* Pointer/hand icon */
-                width: 50%; /* Set a width if needed */
-                /* display: block; Make the buttons appear below each other */
-                text-align: center;
-                vertical-align: middle;
-                }
-
-                .btn-group button:not(:last-child) {
-                border-bottom: none; /* Prevent double borders */
-                }
-
-                /* Add a background color on hover */
-                .btn-group button:hover {
-                background-color: #3e8e41;
-            }
-
-            /* The grid: Four equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 25%;
-  padding: 10px;
-}
-
-/* Style the images inside the grid */
-.column img {
-  opacity: 0.8; 
-  cursor: pointer; 
-}
-
-.column img:hover {
-  opacity: 1;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* The expanding image container */
-.container {
-  position: relative;
-  display: none;
-}
-
-/* Expanding image text */
-#imgtext {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
-  color: white;
-  font-size: 20px;
-}
-
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h3>Buy new weapon systems</h3>
