--- a/main.html
+++ b/main.html
@@ -3,118 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="playerStats.js"></script>
-<style>
-body {font-family: Verdana;}
-
-/* Style the tab */
-.tab {
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-  border: 5px outset lightseagreen;
-  background-color: lightblue;    
-  text-align: center;
-}
-
-.btn {
-    background-color:red;
-    font:bold 14px Arial;
-    width:200;
-    height:100;
-    background-color:lightsteelblue;
-    vertical-align: middle;
-}
-.btn-group button {
-    background-color: #04AA6D; /* Green background */
-    border: 1px solid green; /* Green border */
-    color: white; /* White text */
-    padding: 10px 24px; /* Some padding */
-    cursor: pointer; /* Pointer/hand icon */
-    width: 50%; /* Set a width if needed */
-    /* display: block; Make the buttons appear below each other */
-    text-align: center;
-    vertical-align: middle;
-    }
-
-    .btn-group button:not(:last-child) {
-    border-bottom: none; /* Prevent double borders */
-    }
-
-    /* Add a background color on hover */
-    .btn-group button:hover {
-    background-color: #3e8e41;
-}
-          
-/* The grid: Four equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 25%;
-  padding: 10px;
-}
-
-/* Style the images inside the grid */
-.column img {
-  opacity: 0.8; 
-  cursor: pointer; 
-}
-
-.column img:hover {
-  opacity: 1;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* The expanding image container */
-.container {
-  position: relative;
-  display: none;
-}
-
-/* Expanding image text */
-#imgtext {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
-  color: white;
-  font-size: 20px;
-}
-
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
