--- a/weapon.html
+++ b/weapon.html
@@ -4,41 +4,8 @@
         <meta charset="UTF-8" />
         <script src="playerStats.js"></script>
         <title>Tanx2 - Return of the Killer Tanx</title>
-        <style>
-            .myDiv {
-                border: 5px outset lightseagreen;
-                background-color: lightblue;    
-                text-align: center;
-            }
-            .btn {
-                background-color:red;
-                font:bold 14px Arial;
-                width:200;
-                height:100;
-                background-color:lightsteelblue;
-                vertical-align: middle;
-            }
-            .btn-group button {
-                background-color: #04AA6D; /* Green background */
-                border: 1px solid green; /* Green border */
-                color: white; /* White text */
-                padding: 10px 24px; /* Some padding */
-                cursor: pointer; /* Pointer/hand icon */
-                width: 50%; /* Set a width if needed */
-                /* display: block; Make the buttons appear below each other */
-                text-align: center;
-                vertical-align: middle;
-                }
-
-                .btn-group button:not(:last-child) {
-                border-bottom: none; /* Prevent double borders */
-                }
-
-                /* Add a background color on hover */
-                .btn-group button:hover {
-                background-color: #3e8e41;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css">
+       
     </head>
     <body>
         <div class="myDiv">
