MultipleLevels renamed maxLevel to maxLevelReached; renamed PlayerStats.LevelCount to PlayerStats.TotalLevelCount

--- a/levelSelect.html
+++ b/levelSelect.html
@@ -52,7 +52,7 @@
 
 <script type="text/javascript">
     
-    var maxLevel = PlayerStats.getMaxLevel()
+    var maxLevel = PlayerStats.getMaxLevelReached()
     var levels = [...Array(maxLevel).keys()].map(i => i + 1)
 
 
