WatchEnemy introduced EnemyWatch 'watch enemy' with field of view

--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
     <script src="hq.js"></script>
     <script src="enemy.js"></script>
     <script src="enemyFollow.js"></script> 
+    <script src="enemyWatch.js"></script> 
     <script src="enemyWayPoint.js"></script> 
     <script src="weapon.js"></script>
     <script src="gun.js"></script>
