--- a/main.html
+++ b/main.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="playerStats.js"></script>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="playerStats.js"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
