--- a/game.html
+++ b/game.html
@@ -6,7 +6,9 @@
     <title>Tanx2 - Return of the XGreen Tanx</title>
     <script src="combatant.js"></script>
     <script src="hq.js"></script>
+    <script src="rayCasting.js"></script>
     <script src="enemy.js"></script>
+    <script src="enemyBarracks.js"></script>
     <script src="enemyFollow.js"></script> 
     <script src="enemyWatch.js"></script> 
     <script src="enemyWayPoint.js"></script> 
