Bomb carrier is an be bought as secondary weapon; bombs can be bought (trigger and time bomb); bomb carrier can be loaded with single bomb; bomb can be dropped with right mouse button and triggered with SPACE key

--- a/assets/hqWarMenu.html
+++ b/assets/hqWarMenu.html
@@ -38,7 +38,8 @@
   <h2>You are in the HQ</h2>
   <label id="moneyLabel"></label>
   <div class="btn-group">
-      <button id="repairButton" type="button" class=btn>Repair Tank</button>    
+      <button id="repairButton" type="button" class=btn>Repair Tank</button>
+      <button id="armSecondaryWeapon" type="button" class=btn>Arm Secondary Weapon</button>
       <button id="leaveButton" type="button" class=btn>Leave HQ</button>    
   </div>
 </div>
