--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
     <script src="enemyWayPoint.js"></script> 
     <script src="weapon.js"></script>
     <script src="gun.js"></script>
+    <script src="bombCarrier.js"></script>
     <script src="rearGun.js"></script>
     <script src="spreadGun.js"></script>
     <script src="phaser.min.js"></script>
