--- a/mountWeapon.html
+++ b/mountWeapon.html
@@ -9,11 +9,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h3>Mount weapon systems to tank</h3>
-        <div class="btn-group">
-          <div id="weaponShopImages" class="row" />
-          <div id="secondaryWeaponShopImages" class="row" />
-          <button id="backButton" type="button" class=btn>Back</button>
+        <div class="mainDivContent">
+            <h3>Mount weapon systems to tank</h3>
+            <div class="btn-group">
+            <div id="weaponShopImages" class="row"></div>
+            <div id="secondaryWeaponShopImages" class="row"></div>
+            <button id="backButton" type="button" class=btn>Back</button>
+            </div>
         </div>
     </body>
 </html>
