--- a/secondaryWeaponBuy.html
+++ b/secondaryWeaponBuy.html
@@ -9,15 +9,16 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h3>Buy new secondary weapon systems</h3>
-        <label id="moneyLabel"></label>
-        <div class="btn-group">
-          <div id="shopImages" class="row">
-          </div>
-          <button id="buyWeapon" type="button" class=btn>Buy</button>
-          <button id="backButton" type="button" class=btn>Back</button>
+        <div class="mainDivContent">
+            <h3>Buy new secondary weapon systems</h3>
+            <label id="moneyLabel"></label>
+            <div class="btn-group">
+                <div id="shopImages" class="row">
+                </div>
+                <button id="buyWeapon" type="button" class=btn>Buy</button>
+                <button id="backButton" type="button" class=btn>Back</button>
+            </div>
         </div>
-      
     </body>
 </html>
 
