--- a/weaponBuy.html
+++ b/weaponBuy.html
@@ -11,15 +11,16 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h3>Buy new weapon systems</h3>
-        <label id="moneyLabel"></label>
-        <div class="btn-group">
-          <div id="shopImages" class="row">
-          </div>
-          <button id="buyWeapon" type="button" class=btn>Buy</button>
-          <button id="backButton" type="button" class=btn>Back</button>
+        <div class="mainDivContent">
+            <h3>Buy new weapon systems</h3>
+            <label id="moneyLabel"></label>
+            <div class="btn-group">
+                <div id="shopImages" class="row">
+                </div>
+                <button id="buyWeapon" type="button" class=btn disabled>Buy</button>
+                <button id="backButton" type="button" class=btn>Back</button>
+            </div>
         </div>
-      
     </body>
 </html>
 
@@ -38,6 +39,14 @@
         weaponIds.push(weapon.index)
         image.onclick = (event) => {
             selectedWeaponToBuyIndex = weaponIds[event.srcElement.id]
+            var weaponImages = document.getElementsByTagName("column")
+            for (i = 0; i < weaponImages.length; i++) {
+                weaponImages[i].className = "column"
+            }
+            weaponImages[parseInt(selectedWeaponToBuyIndex)].className = "activeColumn"
+
+            var buyButton = document.getElementById("buyWeapon")
+            buyButton.disabled = false
         }
 
         var text = document.createElement("label")
