--- a/hq.html
+++ b/hq.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <div class="myDiv">
+        <div class="mainDivContent">
             <h2>Buy equipment and get ready for the next battle</h2>
             <label id="moneyLabel"></label>
             <div class="btn-group">
