--- a/weapon.html
+++ b/weapon.html
@@ -5,14 +5,12 @@
         <script src="playerStats.js"></script>
         <title>Tanx2 - Return of the Killer Tanx</title>
         <link rel="stylesheet" href="styles.css">
-       
     </head>
     <body>
-        <div class="myDiv">
+        <div class="mainDivContent">
             <h2>Tanx2 - Boost up your war effectiveness</h2>
             <label id="moneyLabel"></label>
-            <div id="weaponUpgrades" class="btn-group">
-            </div>
+            <div id="weaponUpgrades" class="btn-group"></div>
         </div>
     </body>
 </html>
