--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tanx2 - Return of the XGreen Tanx</title>
+    <script src="imageCreator.js"></script>
     <script src="combatant.js"></script>
     <script src="hq.js"></script>
     <script src="rayCasting.js"></script>
