--- a/weaponBuy.html
+++ b/weaponBuy.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <script src="imageCreator.js"></script>
         <script src="weapon.js"></script>
         <script src="gun.js"></script>
         <script src="rearGun.js"></script>
@@ -33,10 +34,8 @@
 
     for (var weapon of weapons)
     {
-        var image = document.createElement("img")
-        image.setAttribute("src", weapon.shopImage)
-        image.setAttribute("id", weapon.index)
-        weaponIds.push(weapon.index)
+        var image = createImageWithText("shopImages", weapon.shopImage, weapon.index, weapon.price + "€")
+
         image.onclick = (event) => {
             selectedWeaponToBuyIndex = weaponIds[event.srcElement.id]
             var weaponImages = document.getElementsByTagName("column")
@@ -49,15 +48,7 @@
             buyButton.disabled = false
         }
 
-        var text = document.createElement("label")
-        text.innerHTML = weapon.price + "€"
-        
-        var column = document.createElement("column")
-        column.setAttribute("class", "column")
-        column.appendChild(image)
-        column.appendChild(text)
-
-        document.getElementById("shopImages").appendChild(column)
+        weaponIds.push(weapon.index)
     }
 
     document.getElementById("buyWeapon").onclick = function() {
