Added minelayer as secondary weapon; added direct explosion and area explosion mines

--- a/game.html
+++ b/game.html
@@ -16,6 +16,7 @@
     <script src="weapon.js"></script>
     <script src="gun.js"></script>
     <script src="bombCarrier.js"></script>
+    <script src="minelayer.js"></script>
     <script src="rearGun.js"></script>
     <script src="spreadGun.js"></script>
     <script src="phaser.min.js"></script>
