--- a/secondaryWeaponBuy.html
+++ b/secondaryWeaponBuy.html
@@ -5,6 +5,7 @@
         <script src="imageCreator.js"></script>
         <script src="weapon.js"></script>
         <script src="bombCarrier.js"></script>
+        <script src="minelayer.js"></script>
         <script src="playerStats.js"></script>
         <title>Tanx2 - Return of the Killer Tanx</title>
         <link rel="stylesheet" href="styles.css">
